# risksim

./: CMakeLists.txt  README.md
include/: Army.h  Country.h  Game.h  Player.h
run/: CMakeCache.txt  Makefile  cmake_install.cmake  main_test.cpp
src/: Army.cxx  Country.cxx  Game.cxx  Player.cxx
